--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     "node": ">=21"
   },
   "scripts": {
-    "bundle": "npm run format:write && npm run package",
+    "bundle": "npm run package",
     "ci-test": "npx jest",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
-    "format:write": "npx prettier --write .",
-    "format:check": "npx prettier --check .",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "local-action": "npx local-action . src/main.ts .env",
     "package": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
@@ -67,9 +65,17 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "env-bool": "^2.0.1",
+    "fast-glob": "^3.3.2",
+    "jszip": "^3.10.1",
+    "jszip-fixed-date": "^1.0.7",
+    "ts-type": "^3.0.1",
+    "tslib": "^2.8.1",
+    "upath2": "^3.1.20"
   },
   "devDependencies": {
+    "@bluelovers/tsconfig": "^1.0.35",
     "@github/local-action": "^2.2.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
@@ -77,15 +83,13 @@
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.57.0",
+    "eslint": "<9 >=8.57.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.8.0-dev.20241119"
   }
 }
